Исправил ручку /sessions -> добавил обработку значений page и limit для пагинации (tg-analytics) 1. Обновил клиента tg-analytics 2. Исправил ручку /sessions 3. Обновил swagger (API-GW)
