# src/go/api-gw/internal/controllers/http/v1/analytics_handles.go
@@ -758,7 +758,8 @@ func (s *Server) getV1ReportsHostname(c *gin.Context) {
 // @Param category query string false "Фильтр по категории" Enums(Неизвестный класс, Агрессия, расизм, терроризм, Ботнеты, Веб-почта, Досуг и развлечения, Интернет магазины, Компьютерные игры, Криптомайнинг, Наркотики, Порнография и секс, Прокси и анонимайзеры, Реестр запрещенных сайтов, Сайты для взрослых, Сайты распространяющие вирусы, Социальные сети, Торренты и Р2Р-сети, Файловые архивы, Фильмы и видео онлайн, Фишинг, Чаты и мессенджеры, Криптоджекинг, Реклама, Онлайн-игры, Игровые платформы, Вредоносное ПО, Азартные игры, Депрессивный контент, Алкоголь и табак, Положительная категория)
 // @Param type query string false "Фильтр по типу сессии" Enums(Разрешен, Запрещен, VPN)
 // @Param search query string false "Поиск по URL, IP адресу пользователя или IP адресу домена"
-// @Param count query int false "Количество возвращаемых сессий" default(25) minimum(1) maximum(500)
+// @Param page query int false "Номер страницы" default(1) minimum(1)
+// @Param limit query int false "Количество записей на странице" default(10) minimum(1) maximum(100)
 // @Param order_by query string false "Поле для сортировки" default(datetime_utc) Enums(id, datetime_utc, type, status, url, proto, hostname, src_ip, src_country, username, dst_ip, dst_port, dst_country, category)
 // @Param order_dir query string false "Направление сортировки (asc/desc)" default(desc) Enums(asc, desc)
 // @Security BearerAuth
@@ -782,7 +783,17 @@ func (s *Server) getSessions(c *gin.Context) {
 	category := c.Query("category")
 	typeStr := c.Query("type")
 	search := c.Query("search")
-	count, err := strconv.ParseInt(c.Query("count"), 10, 64)
+	page, err := strconv.ParseInt(c.Query("page"), 10, 64)
+	if err != nil {
+		if conflictErr, ok := err.(ResponseErrorInterface); ok {
+			c.JSON(conflictErr.Code(), conflictErr.GetPayload())
+			return
+		}
+
+		s.ErrorResponse(c, http.StatusBadRequest, "Parse int count", err)
+		return
+	}
+	limit, err := strconv.ParseInt(c.Query("limit"), 10, 64)
 	if err != nil {
 		if conflictErr, ok := err.(ResponseErrorInterface); ok {
 			c.JSON(conflictErr.Code(), conflictErr.GetPayload())
@@ -802,7 +813,8 @@ func (s *Server) getSessions(c *gin.Context) {
 		Category: &category,
 		Type:     &typeStr,
 		Search:   &search,
-		Count:    &count,
+		Page:     &page,
+		Limit:    &limit,
 		OrderBy:  &orderBy,
 		OrderDir: &orderDir,
 	}, authInfo)
