# src/go/tg-analytics/docs/swagger.json
@@ -1200,12 +1200,20 @@
                         "in": "query"
                     },
                     {
-                        "maximum": 500,
                         "minimum": 1,
                         "type": "integer",
-                        "default": 25,
-                        "description": "Количество возвращаемых сессий",
-                        "name": "count",
+                        "default": 1,
+                        "description": "Номер страницы",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "maximum": 100,
+                        "minimum": 1,
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Количество записей на странице",
+                        "name": "limit",
                         "in": "query"
                     },
                     {
@@ -1453,10 +1461,6 @@
         "dto.GetSessionsResponse": {
             "type": "object",
             "properties": {
-                "count": {
-                    "description": "Число сессий в ответе",
-                    "type": "integer"
-                },
                 "data": {
                     "description": "Список сессий",
                     "type": "array",
@@ -1464,9 +1468,13 @@
                         "$ref": "#/definitions/dto.Session"
                     }
                 },
-                "total": {
-                    "description": "Общее количество сессийы",
-                    "type": "integer"
+                "meta": {
+                    "description": "Метаданные пагинации",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/dto.PaginationMeta"
+                        }
+                    ]
                 }
             }
         },
