# src/go/tg-analytics/internal/controllers/http/v1/dto/session.go
@@ -50,9 +50,11 @@ type RequestPoint struct {
 }
 
 type GetSessionsResponse struct {
-	Data  []Session `json:"data"`  // Список сессий
-	Count uint      `json:"count"` // Число сессий в ответе
-	Total uint      `json:"total"` // Общее количество сессийы
+	Data []Session      `json:"data"` // Список сессий
+	Meta PaginationMeta `json:"meta"` // Метаданные пагинации
+	//Count uint           `json:"count"` // Число сессий в ответе
+	//Total uint           `json:"total"` // Общее количество сессий
+
 }
 
 type GetDetectionsResponse struct {
